--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -3780,6 +3780,12 @@ body.is-reveal-open {
    BASE TYPOGRAPHY 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
+.wf-loading h1 {
+  visibility: hidden; }
+
+.wf-active h1 {
+  visibility: visible; }
+
 h1 {
   font-family: "adobe-caslon-pro",serif;
   font-size: 5.5vmax; }
@@ -3789,6 +3795,35 @@ h1 {
   @media screen and (min-width: 75em) {
     h1 {
       font-size: 11vmin; } }
+
+.sham-modal h1,
+.news-highlights h1,
+.news-articles h1 {
+  font-size: 4.76vmax; }
+  @media screen and (min-width: 28.75em) {
+    .sham-modal h1,
+    .news-highlights h1,
+    .news-articles h1 {
+      font-size: 6.3vw; } }
+  @media screen and (min-width: 75em) {
+    .sham-modal h1,
+    .news-highlights h1,
+    .news-articles h1 {
+      font-size: 9.53vmin; } }
+
+.desktop-video-wrap h1,
+.mobile-static-wrap h1 {
+  font-style: italic;
+  color: #fff; }
+
+.region-ideals h1 {
+  font-size: 6.5vmax; }
+  @media screen and (min-width: 28.75em) {
+    .region-ideals h1 {
+      font-size: 12vw; } }
+  @media screen and (min-width: 75em) {
+    .region-ideals h1 {
+      font-size: 16vmin; } }
 
 h2 {
   font-family: "adobe-caslon-pro",serif;
@@ -3812,11 +3847,10 @@ h3 {
       font-size: 8.06vmin; } }
 
 h4 {
-  font-family: "proxima-nova",sans-serif;
-  font-size: 3.3vmax;
   color: #8b8782;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem; }
+  font-family: "adobe-caslon-pro",serif;
+  font-size: 3.3vmax;
+  padding-bottom: 0.5rem; }
   @media screen and (min-width: 28.75em) {
     h4 {
       font-size: 4.3vw; } }
@@ -3824,38 +3858,112 @@ h4 {
     h4 {
       font-size: 6.6vmin; } }
 
+h4 span {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #8b8782; }
+
 h5 {
-  font-size: 3vmax;
+  font-size: 3.2vmax;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  margin-top: 1.5rem;
   color: #8b8782; }
   @media screen and (min-width: 28.75em) {
     h5 {
-      font-size: 3.4vw; } }
+      font-size: 3.2vw; } }
   @media screen and (min-width: 75em) {
     h5 {
-      font-size: 5.13vmin; } }
+      font-size: 4.7vmin; } }
 
-p.larger-text,
-.larger-text p {
-  font-size: 2.9vmax; }
-  @media screen and (min-width: 28.75em) {
-    p.larger-text,
-    .larger-text p {
-      font-size: 2.8vw; } }
-  @media screen and (min-width: 75em) {
-    p.larger-text,
-    .larger-text p {
-      font-size: 3.6vmin; } }
+h5 span {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #8b8782; }
 
-p, li {
-  font-size: 2.5vmax; }
+h6 {
+  color: #8b8782;
+  font-size: 2.75vmax;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
   @media screen and (min-width: 28.75em) {
-    p, li {
+    h6 {
       font-size: 2.3vw; } }
   @media screen and (min-width: 75em) {
+    h6 {
+      font-size: 3.1vmin; } }
+
+h6 span {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #8b8782; }
+
+.sidebar h6 {
+  margin-top: 0.75rem; }
+
+blockquote {
+  font-family: "adobe-caslon-pro",serif;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 3.26vmax;
+  line-height: 1.35;
+  padding: 0; }
+  @media screen and (min-width: 28.75em) {
+    blockquote {
+      font-size: 4.3vw;
+      padding: 0 5vw; } }
+  @media screen and (min-width: 75em) {
+    blockquote {
+      font-size: 6.52vmin; } }
+
+blockquote span {
+  font-style: italic; }
+
+.small-caps {
+  font-family: "adobe-caslon-pro",serif;
+  text-transform: uppercase;
+  font-size: 1.125rem;
+  letter-spacing: 0.1rem;
+  color: #141f25; }
+  @media screen and (min-width: 28.75em) {
+    .small-caps {
+      margin-top: 1rem;
+      color: #fff;
+      font-size: 4.5vw; } }
+  @media screen and (min-width: 47.9375em) {
+    .small-caps {
+      font-size: 4.25vw; } }
+  @media screen and (min-width: 75em) {
+    .small-caps {
+      font-size: 2.8125rem; } }
+
+p, li {
+  font-size: 2.9vmax; }
+  @media screen and (min-width: 28.75em) {
     p, li {
+      font-size: 2.8vw; } }
+  @media screen and (min-width: 75em) {
+    p, li {
+      font-size: 3.6vmin; } }
+
+.reduced-text p,
+.reduced-text li,
+p.reduced-text,
+li.reduced-text {
+  font-size: 2.5vmax; }
+  @media screen and (min-width: 28.75em) {
+    .reduced-text p,
+    .reduced-text li,
+    p.reduced-text,
+    li.reduced-text {
+      font-size: 2.3vw; } }
+  @media screen and (min-width: 75em) {
+    .reduced-text p,
+    .reduced-text li,
+    p.reduced-text,
+    li.reduced-text {
       font-size: 3vmin; } }
 
 small {
@@ -3866,55 +3974,6 @@ p a {
 
 p a:hover {
   color: #000; }
-
-h2.small-caps {
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  letter-spacing: 0.1rem;
-  color: #141f25; }
-  @media screen and (min-width: 28.75em) {
-    h2.small-caps {
-      margin-top: 1rem;
-      color: #fff;
-      font-size: 4.5vw; } }
-  @media screen and (min-width: 47.9375em) {
-    h2.small-caps {
-      font-size: 4.25vw; } }
-  @media screen and (min-width: 75em) {
-    h2.small-caps {
-      font-size: 2.8125rem; } }
-
-h3 span {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-  padding-bottom: 0.3rem;
-  border-bottom: 1px solid #8b8782; }
-  @media screen and (min-width: 28.75em) {
-    h3 span {
-      font-size: 4vw; } }
-  @media screen and (min-width: 75em) {
-    h3 span {
-      font-size: 3.125rem; } }
-
-h4 span {
-  display: inline-block;
-  padding-bottom: 0.5rem;
-  border-bottom: 1px solid #8b8782; }
-
-h5 span {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-  padding-bottom: 0.5rem;
-  border-bottom: 1px solid #8b8782; }
-
-.sidebar h5 {
-  margin-top: 0.5rem; }
-
-.wf-loading h1 {
-  visibility: hidden; }
-
-.wf-active h1 {
-  visibility: visible; }
 
 a.view-more {
   display: inline-block;
@@ -3928,13 +3987,13 @@ a.view-more {
   background-repeat: no-repeat;
   background-size: 21px 15px;
   background-position: 100% 60%;
-  font-size: 1rem; }
+  font-size: 2.9vmax; }
   @media screen and (min-width: 28.75em) {
     a.view-more {
-      font-size: 1.25rem; } }
-  @media screen and (min-width: 47.9375em) {
+      font-size: 2.8vw; } }
+  @media screen and (min-width: 75em) {
     a.view-more {
-      font-size: 1.5rem; } }
+      font-size: 3.6vmin; } }
 
 a.view-more:hover {
   opacity: 1; }
@@ -4352,12 +4411,6 @@ a.view-more:hover {
 
 /* HOME PAGE 
 ======================================================================== */
-.region-ideals h1 {
-  font-size: 2.75rem; }
-  @media screen and (min-width: 28.75em) {
-    .region-ideals h1 {
-      font-size: 10vw; } }
-
 .region-glance {
   border-top: 1px solid #c4c0bd; }
 
@@ -4373,9 +4426,19 @@ a.view-more:hover {
     .region-glance .glance-wrap .row:nth-of-type(2) {
       border-top: 1px solid #fff; } }
 
-.region-glance .glance-wrap .row h2,
-.region-glance .glance-wrap .row h6 {
+.region-glance .glance-wrap .row h2 {
+  font-style: italic;
   color: #fff; }
+
+.region-glance .glance-wrap .row p {
+  color: #fff;
+  font-size: 3.48vmax; }
+  @media screen and (min-width: 28.75em) {
+    .region-glance .glance-wrap .row p {
+      font-size: 3.36vw; } }
+  @media screen and (min-width: 75em) {
+    .region-glance .glance-wrap .row p {
+      font-size: 4.32vmin; } }
 
 .region-glance .glance-wrap .columns {
   padding: 3.5rem 1rem 1.5rem 1rem;
@@ -4463,15 +4526,22 @@ a.view-more:hover {
       padding-bottom: 0; } }
 
 .block-team-bio-header h2,
-.block-team-bio-header h4 {
+.block-team-bio-header h5 {
   color: #fff;
   text-align: center;
   margin-top: 1rem; }
   @media screen and (min-width: 28.75em) {
     .block-team-bio-header h2,
-    .block-team-bio-header h4 {
+    .block-team-bio-header h5 {
       text-align: left;
       margin-top: 0; } }
+
+.block-team-bio-text .sidebar {
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+  @media screen and (min-width: 28.75em) {
+    .block-team-bio-text .sidebar {
+      margin-top: 0.5rem; } }
 
 /* NEWS: OVERVIEW PAGE 
 ======================================================================== */
@@ -4495,32 +4565,18 @@ a.view-more:hover {
   padding-top: 3rem;
   padding-bottom: 3rem; }
 
-.block-news-highlights h5,
-.block-news-head h5 {
+.block-news-highlights h1,
+.block-news-highlights h6,
+.block-news-article h1,
+.block-news-article h6 {
   margin-bottom: 2rem; }
 
 /* STORIES: OVERVIEW PAGE 
 ======================================================================== */
 /* STORIES: SINGLE ENTRY PAGE 
 ======================================================================== */
-.block-story-header h4 {
+.block-story-header h6 {
   color: #fff; }
-
-blockquote {
-  font-family: "adobe-caslon-pro",serif;
-  font-style: italic;
-  font-size: 1rem;
-  line-height: 1.25;
-  margin-top: 2rem; }
-  @media screen and (min-width: 28.75em) {
-    blockquote {
-      font-size: 4.5vw; } }
-  @media screen and (min-width: 47.9375em) {
-    blockquote {
-      font-size: 5vw; } }
-  @media screen and (min-width: 75em) {
-    blockquote {
-      font-size: 3.125rem; } }
 
 .block-story-images {
   background-color: #e6e4e3; }
@@ -4534,16 +4590,6 @@ blockquote {
       padding: 0;
       max-width: 25vw;
       max-height: 25vw; } }
-
-.block-story-text .left,
-.block-story-text .right {
-  width: 90%;
-  margin-left: 5%; }
-  @media screen and (min-width: 47.9375em) {
-    .block-story-text .left,
-    .block-story-text .right {
-      width: 80%;
-      margin-left: 10%; } }
 
 /* INVESTMENTS PAGE 
 ======================================================================== */
@@ -4669,6 +4715,9 @@ figcaption a.btn-play:hover {
 .block-pad-lg-bot {
   padding-bottom: 12vw; }
 
+.margin-bottom-30 {
+  margin-bottom: 2.5rem; }
+
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
    FILTERS 
@@ -4756,6 +4805,9 @@ figcaption a.btn-play:hover {
   bottom: 1rem;
   color: #fff;
   padding: 1rem; }
+
+.child-list .company-filter-placeholder p {
+  font-size: 1rem; }
 
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
@@ -4873,11 +4925,6 @@ figcaption a.btn-play:hover {
   @media screen and (min-width: 47.9375em) {
     .mobile-static-wrap {
       display: none; } }
-
-.desktop-video-wrap h1,
-.mobile-static-wrap h1 {
-  font-style: italic;
-  color: #fff; }
 
 .text-container {
   position: absolute;
@@ -5042,11 +5089,7 @@ footer h2 {
   margin-bottom: 1.25rem; }
 
 footer p {
-  font-size: 1.25rem;
   margin: 0; }
-  @media screen and (min-width: 75em) {
-    footer p {
-      font-size: 1.5rem; } }
 
 footer p span.bullet {
   display: none; }
