--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -35,6 +35,14 @@
 	padding-bottom: 12vw;
 }
 
+.pad-sm-top-bot {
+	padding: 4vw 0;
+}
+
+.pad-md-top-bot {
+	padding: 7vw 0;
+}
+
 .margin-bottom-30 {
 	margin-bottom: 2.5rem;
 }
