--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -228,14 +228,101 @@
 	position: relative;
 }
 
-.border-override {
-    position: absolute;
-    top: -1px;
-    bottom: -1px;
-    left: -1px;
-    right: -1px;
-	border: 2px solid #fff;
+.logo-grid {
+	float: left;
+	margin: 0;
+	font-size: 0;
+	line-height: 0;
+    cursor: pointer;
+	width: 100vw;
+	height: 100vw;
+	border-bottom: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+	@include breakpoint(medium) {
+		width: 50%;
+		height: 50vw;
+	}
+	@include breakpoint(large) {
+		width: 33.333333%;
+		height: 33.333333vw;
+	}
+	@include breakpoint(xlarge) {
+		width: 25%;
+		height: 25vw;
+	}
 }
+
+.logo-grid:hover {
+	opacity: 0.8;
+}
+
+@include breakpoint(medium) {
+	.logo-grid {
+		border-right: 1px solid #000;
+	}
+	.logo-grid:nth-child(2n+2) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+2) {
+		border-bottom: none;
+	}
+}
+
+@include breakpoint(large) {
+	.logo-grid:nth-child(2n+2) {
+		border-right: 1px solid #000;
+	}
+	.logo-grid:nth-child(3n+3) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+3) {
+		border-bottom: none;
+	}
+}
+
+@include breakpoint(xlarge) {
+	.logo-grid:nth-child(3n+3) {
+		border-right: 1px solid #000;
+	}
+	.logo-grid:nth-child(4n+4) {
+		border-right: none;
+	}
+	.logo-grid:nth-last-child(-n+4) {
+		border-bottom: none;
+	}
+}
+
+
+.logo-grid img {
+    padding: 0;
+    max-width: 80vw;
+    max-height: 80vw;
+
+	@include breakpoint(medium) {
+	    max-width: 40vw;
+	    max-height: 40vw;
+	}
+	@include breakpoint(large) {
+	    max-width: 25vw;
+	    max-height: 25vw;
+	}
+	@include breakpoint(xlarge) {
+	    max-width: 20vw;
+	    max-height: 20vw;
+	}
+}
+
+
+
+
+
+
+
+
+
 
 
 
