--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -235,7 +235,7 @@
 	line-height: 0;
     cursor: pointer;
 	width: 100vw;
-	height: 100vw;
+	height: 98vw;
 	border-bottom: 1px solid #000;
     display: flex;
     justify-content: center;
@@ -243,15 +243,15 @@
     
 	@include breakpoint(medium) {
 		width: 50%;
-		height: 50vw;
+		height: 48vw;
 	}
 	@include breakpoint(large) {
 		width: 33.333333%;
-		height: 33.333333vw;
+		height: 30vw;
 	}
 	@include breakpoint(xlarge) {
 		width: 25%;
-		height: 25vw;
+		height: 300px;
 	}
 }
 
@@ -297,21 +297,26 @@
 
 
 .logo-grid img {
+	display: block;
     padding: 0;
-    max-width: 80vw;
-    max-height: 80vw;
+    max-width: 60%;
+    max-height: 60%;
+	width: auto;
+    height: auto;
+    object-fit: contain;
+
 
 	@include breakpoint(medium) {
-	    max-width: 40vw;
-	    max-height: 40vw;
+	    max-width: 35vw;
+	    max-height: 35vw;
 	}
 	@include breakpoint(large) {
 	    max-width: 25vw;
 	    max-height: 25vw;
 	}
 	@include breakpoint(xlarge) {
-	    max-width: 20vw;
-	    max-height: 20vw;
+	    max-width: 250px;
+	    max-height: 250px;
 	}
 }
 
