--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -66,6 +66,14 @@
 
 // margin options .................................................
 
+.margin-none-bot {
+	margin-bottom: 0;
+}
+
+.margin-sm-bot {
+	margin-bottom: 1.25rem;
+}
+
 .margin-md-bot {
 	margin-bottom: 2.5rem;
 }
