--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -57,7 +57,7 @@ h1 {
 }
 
 .region-ideals h1 {
-	font-size: 6.5vmax;
+	font-size: 8vmax;
     
 	@include breakpoint(medium) {
    		font-size: 15vw;
@@ -101,14 +101,17 @@ h3 {
 h4 {
 	color: $warm-gray-2;
 	font-family: "adobe-caslon-pro",serif;
-	font-size: 3.3vmax;
 	padding-bottom: 0.5rem;
+	font-size: 1.6rem;
 	
 	@include breakpoint(medium) {
-		font-size: 4.3vw;
+		font-size: 2rem;
+	}
+	@include breakpoint(large) {
+		font-size: 2.1rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 6.6vmin;
+		font-size: 2.2rem;
 	}
 	
 }
@@ -120,17 +123,21 @@ h4 span {
 	border-bottom: 1px solid $warm-gray-2;
 }
 
+h4:not(:first-child) {
+	margin-top: 2.5rem;
+}
+
 h5 {
-	font-size: 1rem;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	color: $warm-gray-2;
-	
+	font-size: 1.2rem;
+
 	@include breakpoint(medium) {
-		font-size: 1.2rem;
+		font-size: 1.4rem;
 	}
 	@include breakpoint(large) {
-		font-size: 1.6rem;
+		font-size: 1.7rem;
 	}
 	@include breakpoint(xlarge) {
 		font-size: 2rem;
@@ -147,15 +154,15 @@ h5 span {
 
 h6 {
 	color: $warm-gray-2;
-	font-size: 2.75vmax;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
-	
-	@include breakpoint(medium) {
-		font-size: 2.3vw;
+	font-size: 1.1rem;
+
+	@include breakpoint(large) {
+		font-size: 1.2rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 3.1vmin;
+		font-size: 1.3rem;
 	}
 	
 }
@@ -168,7 +175,7 @@ h6 span {
 }
 
 .sidebar h6 {
-	margin-top: 0.75rem;
+	margin-top: 0.5rem;
 }
 
 
@@ -180,16 +187,19 @@ blockquote {
 	font-family: "adobe-caslon-pro",serif;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-	font-size: 3.26vmax;
+	font-size: 2rem;
 	line-height: 1.35;
 	padding: 0;
    
 	@include breakpoint(medium) {
-		font-size: 4.3vw;
+		font-size: 2.5rem;
 		padding: 0 5vw;
 	}
+	@include breakpoint(large) {
+		font-size: 3rem;
+	}
 	@include breakpoint(xlarge) {
-		font-size: 6.52vmin;
+		font-size: 4.5rem;
 	}
 
 }
@@ -207,11 +217,10 @@ blockquote span {
 	text-transform: uppercase;
 	font-size: rem-calc(18);
 	letter-spacing: 0.1rem;
-	color: $dark-gray;
+	color: #fff;
    
 	@include breakpoint(medium) {
 		margin-top: 1rem;
-		color: #fff;
 		font-size: 4.5vw;
 	}
 	@include breakpoint(large) {
@@ -229,13 +238,16 @@ blockquote span {
 
 p, li {
 
-	font-size: 2.9vmax;
+	font-size: 1.2rem;
 
 	@include breakpoint(medium) {
-		font-size: 2.8vw;
+		font-size: 1.4rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.5rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 3.6vmin;
+		font-size: 1.6rem;
 	}
 	
 }
@@ -245,13 +257,16 @@ p, li {
 p.reduced-text, 
 li.reduced-text {
 	
-	font-size: 2.5vmax;
+	font-size: 1rem;
 
 	@include breakpoint(medium) {
-		font-size: 2.3vw;
+		font-size: 1.15rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.3rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 3vmin;
+		font-size: 1.45rem;
 	}
 	
 }
@@ -277,7 +292,7 @@ p a:hover {
 
 a.view-more {
 	display: inline-block;
-	margin-top: rem-calc(32);
+	margin-top: 1.4rem;
 	padding: rem-calc(4) rem-calc(32) 0 0;
 	text-align: center;
 	color: #000;
@@ -287,13 +302,18 @@ a.view-more {
 	background-repeat: no-repeat;
 	background-size: 21px 15px;
 	background-position: 100% 60%;
-	font-size: 2.9vmax;
+	font-size: 1.2rem;
 
 	@include breakpoint(medium) {
-		font-size: 2.8vw;
+		font-size: 1.4rem;
+		margin-top: 2rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.6rem;
+		margin-top: 2.4rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 3.6vmin;
+		font-size: 1.8rem;
 	}
 
 }
