--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -32,12 +32,11 @@ h1 {
    		font-size: 7.5vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 11vmin;
+		font-size: 6rem;
 	}
 }
 
 .sham-modal h1, 
-.news-highlights h1, 
 .news-articles h1 {
 	
 	font-size: 4.76vmax;
@@ -46,9 +45,22 @@ h1 {
 		font-size: 6.3vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 9.53vmin;
+		font-size: 6rem;
 	}
 }
+
+.news-highlights h1 {
+	
+	font-size: 4.76vmax;
+   
+	@include breakpoint(medium) {
+		font-size: 6.3vw;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 5rem;
+	}
+}
+
 
 .desktop-video-wrap h1,
 .mobile-static-wrap h1 {
@@ -63,7 +75,7 @@ h1 {
    		font-size: 15vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 22vmin;
+		font-size: 8.75em;
 	}
 }
 
@@ -81,7 +93,7 @@ h2 {
 		font-size: 6.3vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 9.53vmin;
+		font-size: 5rem;
 	}
 }
 
@@ -94,7 +106,7 @@ h3 {
 		font-size: 5.3vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 8.06vmin;
+		font-size: 4rem;
 	}
 }
 
@@ -185,6 +197,7 @@ h6 span {
 
 blockquote {
 	font-family: "adobe-caslon-pro",serif;
+	font-style: italic;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	font-size: 2rem;
@@ -199,13 +212,9 @@ blockquote {
 		font-size: 3rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 4.5rem;
+		font-size: 3.75rem;
 	}
 
-}
-
-blockquote span {
-	font-style: italic;
 }
 
 
@@ -215,19 +224,19 @@ blockquote span {
 .small-caps {
     font-family: "adobe-caslon-pro",serif;
 	text-transform: uppercase;
-	font-size: rem-calc(18);
-	letter-spacing: 0.1rem;
+	font-size: 1.6rem;
+	letter-spacing: 0.2rem;
 	color: #fff;
    
 	@include breakpoint(medium) {
 		margin-top: 1rem;
-		font-size: 4.5vw;
+		font-size: 2.1rem;
 	}
 	@include breakpoint(large) {
-		font-size: 4.25vw;
+		font-size: 2,6rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(45);
+		font-size: 3.1rem;
 	}
 }
 
@@ -248,6 +257,22 @@ p, li {
 	}
 	@include breakpoint(xlarge) {
 		font-size: 1.6rem;
+	}
+	
+}
+
+.region-glance p {
+
+	font-size: 1.2rem;
+
+	@include breakpoint(medium) {
+		font-size: 1.4rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.5rem;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 2.2rem;
 	}
 	
 }
@@ -309,11 +334,11 @@ a.view-more {
 		margin-top: 2rem;
 	}
 	@include breakpoint(large) {
-		font-size: 1.6rem;
+		font-size: 1.45rem;
 		margin-top: 2.4rem;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 1.8rem;
+		font-size: 1.5rem;
 	}
 
 }
