--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -99,14 +99,7 @@
 }
 
 .child-list .company-filter-placeholder {
-	position: absolute;
-	width: auto;
-	text-align: center;
-	left: 1rem;
-	top: 1rem;
-	right: 1rem;
-	bottom: 1rem;
-	color:#fff;
+	color:#000;
 	padding: 1rem;
 }
 
