--- a/_scss/custom/_footer.scss
+++ b/_scss/custom/_footer.scss
@@ -51,6 +51,7 @@ footer .logo a {
 	background-repeat: no-repeat;
 	background-size: 10.31rem 3.813rem;
 	background-position: 50% 50%;
+	transition: opacity 0.375s linear;
 }
 
 footer .logo a:after {
