--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -312,6 +312,10 @@ p a:hover {
 	color: #000;
 }
 
+
+
+// custom size for text list bullets ...................................
+
 .block li {
 	list-style: none;
 }
@@ -325,6 +329,8 @@ p a:hover {
   margin-left: -1.25rem;
   vertical-align: middle;
 }
+
+
 
 // links with right arrow ..............................................
 
