--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -18,6 +18,160 @@
 }
 
 
+
+// tests
+
+.block-skewx-wrap {
+	position: relative;
+	width: 100%;
+	height: 33vh;
+	margin-bottom: 5rem;
+	
+	@media screen and (max-width: 766px) and (orientation: landscape) {
+		height: 66vh;
+	}
+		
+}
+
+.block-skewx {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top:0;
+	bottom: 0;
+	padding-top: 5rem;
+}
+
+.block-skewx:after {
+	position: absolute;
+	content: '';
+	left: 0px;
+	right: 0px;
+	top: 100%;
+	border-width: 20px 50vw;
+	padding: 0;
+	margin: 0;
+	border-style: solid;
+	border-color: $dark-gray green red blue;
+	box-sizing: border-box;
+
+/*
+	@include breakpoint(medium) {
+		border-width: 1rem 46vw;
+	}
+
+	@include breakpoint(large) {
+		border-width: 1.5rem 47vw;
+	}
+
+	@include breakpoint(xlarge) {
+		border-width: 2rem 48vw;
+	}
+*/
+}
+
+
+.block-skewfuck {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top:0;
+	bottom: 0;
+	padding-top: 5rem;
+}
+
+.skewfucker {
+	position: absolute;
+	content: '';
+	left: 0px;
+	right: 0px;
+	top: 30vh;
+	border-width: 3vw 50vw;
+	margin-left: -20px;
+	margin-right: 15px;
+	border-style: solid;
+	border-color: $warm-gray-1 #fff #fff $warm-gray-1;
+	box-sizing: border-box;
+
+	@include breakpoint(medium) {
+		border-width: 1rem 50vw;
+	}
+
+	@include breakpoint(large) {
+		border-width: 1.5rem 50vw;
+	}
+
+	@include breakpoint(xlarge) {
+		border-width: 2rem 50vw;
+	}
+}
+
+/*
+.block-skewx.warm-gray-1:after {
+	border-color: $warm-gray-1 rgba(0,0,0,0) rgba(0,0,0,0) $warm-gray-1;
+}	
+*/
+		
+.block-skewx span {
+	position: relative;
+	top: 0;
+	bottom: 0;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+			
+.block-skewx h1 {
+	color: #fff;
+}
+
+
+
+
+
+
+		.shape {
+		    position: absolute;
+		    left: 0;
+		    right: 0;
+		    top:0;
+		    bottom: 0;
+		    background: #d0c;
+		    
+		}
+		.shape:after {
+		    position: absolute;
+		    content: '';
+		    left: 0px;
+		    right: 0px;
+		    top: 100%;
+		    border-top-width: 2rem;
+		    border-right-width: 49vw;
+		    border-bottom-width: 2rem;
+		    border-left-width: 49vw;
+		    border-style: solid;
+		    border-color: blue rgba(0,0,0,0) rgba(0,0,0,0) red;
+		}	
+		
+		.shape span {
+			position: relative;
+			top: 0;
+			bottom: 0;
+			height: 100%;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+		}
+
+
+
 // skewed block with page head..........................................
 
 .block-skew {
