--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -82,6 +82,112 @@
 
 
 
+/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+  
+   SPACING TWEAKS 
+   
+|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
+
+
+
+// padding .............................................................
+
+.padding-x-3-x-3 {
+	padding-left: 3vw;
+	padding-right: 3vw;
+}
+
+.padding-3-0-3-0 {
+	padding: 3vh 0;
+}
+
+.padding-3-0-0-0 {
+	padding: 3vh 0 0 0;
+}
+
+.padding-0-0-3-0 {
+	padding: 0 0 3vh 0;
+}
+
+.padding-3-x-x-x {
+	padding-top: 3vh;
+}
+
+.padding-x-x-3-x {
+	padding-bottom: 3vh;
+}
+
+.padding-0-0-4-0 {
+	padding-bottom: 4vh;
+}
+
+.padding-4-0-0-0 {
+	padding-top: 4vh;
+}
+
+.padding-4-0-4-0 {
+	padding: 4vh 0;
+}
+
+.padding-4-x-x-x {
+	padding-top: 4vh;	
+}
+
+.padding-x-x-4-x {
+	padding-bottom: 4vh;
+}
+
+.padding-7-0-7-0 {
+	padding: 7vh 0;
+}
+
+.padding-7-3-7-3 {
+	padding: 7vh 3vw;
+}
+
+.padding-12-4-12-4 {
+	padding: 12vh 4vw;
+}
+
+
+
+
+// margins .............................................................
+
+.margin-x-x-0-x {
+	margin-bottom: 0;
+}
+
+.margin-x-x-1-x {
+	margin-bottom: 1.25rem;
+}
+
+.margin-x-x-2-x {
+	margin-bottom: 2.5rem;
+}
+
+.margin-none-bot {
+	margin-bottom: 0;
+}
+
+.margin-sm-bot {
+	margin-bottom: 1.25rem;
+}
+
+.margin-md-bot {
+	margin-bottom: 2.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
