--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -199,7 +199,7 @@ blockquote {
 	font-family: "adobe-caslon-pro",serif;
 	font-style: italic;
 	margin-top: 2rem;
-	margin-bottom: 2rem;
+	margin-bottom: 0;
 	font-size: 2rem;
 	line-height: 1.35;
 	padding: 0;
